$Id$

****************************** DRUPAL 5 BRANCH ********************************

May 12, 2008
------------
Fixed pluralizing of "1 new replies" on top of post jump link.
Added extra markup for the post header area. (Theme changes: advf-forum-post.tpl.php - Added div.forum-post-header)
#253155 Changed _is_forum() to advanced_forum_treat_as_forum_post() to comply with coding standards and clarify purpose. 
#253155 Changed _topic_nid() to _advanced_forum_topic_nid().
#246701 IE 6 fixes. Thanks, CompShack. (Theme changes: Affects both .css files)

May 11, 2008
------------
#255949 Added link to top of forum threads that lists the number of unread comments and links to the first one. This links to the comment id and so will work across pages. (Theme changes: advf-forum-post.tpl.php - Added $jump_first_new)

May 10, 2008
------------
#253365 Patch to make advforum and Zen subthemes play nice. Also fixes my goof with theme_image(). Thanks, JohnAlbin.

May 7, 2008 -- Alpha 8
-----------
#253778 Fixed typo that prevented advforum directory from being found. Thanks VValdo.
#254892 Added variable for forum description to forum topic list. Theme changes: advf-forums.tpl.php - Added description. advf-forum-topic-list.tpl.php - Updated variable list to include $forum_description. advf-forum-topic-list.tpl.php - padding around new class.
#239724 Excluded CSS from block admin page due to weird issue. Thanks ajevans85.
#246778 Fixed extra = that caused anon posters to show joined, etc.
#249651 Added check that contact module is enabled.
#248652 Fixed PHP 4 incompatibility in showing last post in forum. Thanks jamix.
Fixed 'user' information not showing for visitors on comments.

April 17, 2008
--------------
#246701 Fix for IE 6 hiding post info. Thanks CompShack.
#241258 Changed the forum overview 'new topics' folder from red to green and kept red version as forum-all-new-red.png. Thanks Zandroc.

April 8, 2008
-------------