@@ -10,6 +10,7 @@
  * - $icon: The icon to display. May be one of 'hot', 'hot-new', 'new',
  *   'default', 'closed', or 'sticky'.
  * - $iconpath: Path from Drupal root to the directory with the forum icons.
+ * - $topic_id: NID of the forum topic the icon is associated with
  *
  * @see template_preprocess_forum_icon()
  * @see advanced_forum_preprocess_forum_icon()
@@ -20,7 +21,7 @@
   <a name="new">
 <?php endif; ?>
 
-<?php print theme('image', "$iconpath/forum-$icon.png"); ?>
+<?php print l(theme('image', "$iconpath/forum-$icon.png"), "node/$topic_id", NULL, NULL, NULL, FALSE, TRUE); ?>
 
 <?php if ($new_posts): ?>
   </a>
